--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   transparent_image: ^1.0.0
+  url_launcher: ^5.2.5
 
 dev_dependencies:
   flutter_test:
