--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ flutter:
   fonts:
     - family: TCUMyinfoIcon
       fonts:
-        - asset: fonts/TCUMyinfoIcon.ttf
+        - asset: assets/fonts/TCUMyinfoIcon.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
