--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   transparent_image: ^1.0.0
   url_launcher: ^5.2.5
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
