--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   transparent_image: ^1.0.0
   url_launcher: ^5.2.5
   http: ^0.12.0+2
+  flutter_speed_dial: ^1.2.4
 
 dev_dependencies:
   flutter_test:
