--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   url_launcher: ^5.2.5
   http: ^0.12.0+2
   flutter_speed_dial: ^1.2.4
+  flutter_html: ^0.11.0
 
 dev_dependencies:
   flutter_test:
