--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: ^0.12.0+2
   flutter_speed_dial: ^1.2.4
   flutter_html: ^0.11.0
+  package_info: ^0.4.0+13
 
 dev_dependencies:
   flutter_test:
