--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_speed_dial: ^1.2.4
   flutter_html: ^0.11.0
   package_info: ^0.4.0+13
+  shared_preferences: ^0.5.6
 
 dev_dependencies:
   flutter_test:
