--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_html: ^0.11.0
   package_info: ^0.4.0+13
   shared_preferences: ^0.5.6
+  flutter_screenutil: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -51,9 +52,10 @@ flutter:
       fonts:
         - asset: assets/fonts/TCUMyinfoIcon.ttf
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+  #module:
+    #androidX: true
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
